--- a/prac_0/main.tex
+++ b/prac_0/main.tex
@@ -5,5 +5,17 @@
 \tit{P.0.12.}
 
 \begin{document}
-    \maketitle
+\maketitle
+\tableofcontents
+
+\begin{lstlisting}[language=ps]
+function guwno()  # no guwno no
+    for i in 1:100
+        if i != 1
+            println(i)
+        end
+    end
+end
+\end{lstlisting}
+
 \end{document}
