--- a/prac_0/main.tex
+++ b/prac_0/main.tex
@@ -8,19 +8,9 @@
 \maketitle
 \tableofcontents
 
-\begin{lstlisting}[language=ps]
-function guwno()  # no guwno no
-    for i in 1:100
-        if i != 1
-            println(i)
-        end
-    end
-end
-\end{lstlisting}
-
 \section{Wstęp}
 
-W matematyce bardzo często pojawiają się wartości niewymierne, takie jak $\log_2 3$, których nie możemy wyrazić w sposób przystępny dla człowieka. Z tego powodu, powstało wiele metod przybliżania funkcji w określonych punktach. Jedną z nich jest użycie szeregu Taylora, opisanego przez Brooka Taylora w 1715 roku oraz wspomniana przez Jamesa Gregory'a w 1671 r.
+W matematyce bardzo często pojawiają się wartości niewymierne, takie jak $\ln 3$, których nie możemy wyrazić w sposób przystępny dla człowieka. Z tego powodu, powstało wiele metod przybliżania funkcji w określonych punktach. Jedną z nich jest użycie szeregu Taylora, opisanego przez Brooka Taylora w 1715 roku oraz wspomniana przez Jamesa Gregory'a w 1671 r.
 \medskip
 
 W swojej istocie twierdzenie Taylora mówi, że jeśli dana jest funkcja $f$ klasy $C^n$, czyli różniczkowalna $n$ razy w każdym punkcie jej dziedziny, to możemy ją przybliżyć w otoczeniu dowolnego punktu $a$ za pomocą szeregu:
@@ -32,6 +22,21 @@ Jak nietrudno zauważyć, wartość $R_n(x, a)$ przy $x$ bardzo blisko $a$ jest 
 
 Innym ciekawym zastosowaniem szeregów Taylora jest tworzenie grafów funkcji. Możemy zdefiniować na przykład $\tan x$ w pobliżu punktu $0$ jako zwykły wielomian, co pozwala na obliczenie przybliżonych wartości funkcji i naniesienie ich na oś współrzędnych. W matematyce szereg Taylora, który aproksymuje funkcje w pobliżu punktu $0$ nosi nazwę szeregu Maclaurina.
 
-Celem niniejszego sprawozdania jest sprawdzenie dokładności przybliżania funkcji za pomocą szeregów Taylora. W \$\$2-3 omówiono dwa ważne zastosowania szeregów Taylora: przybliżanie wartości niewymiernych oraz rysowanie grafów funkcji. Dokładniej, w \$\$2. przedstawiono wyniki przybliżania wartości $\log_2 3$ przy pomocy szeregów Taylora różnego stopnia. \$\$3. zajmuje się natomiast rysowaniem grafu funkcji $\tan x$ w pobliżu $0$ oraz porównaniem tego z wartościami otrzymanymi za pomocą bibliotecznej funkcji $\tan$ w języku Julia.
+Celem niniejszego sprawozdania jest sprawdzenie dokładności przybliżania funkcji za pomocą szeregów Taylora. W \$\$2-3 omówiono dwa ważne zastosowania szeregów Taylora: przybliżanie wartości niewymiernych oraz rysowanie grafów funkcji. Dokładniej, w \$\$2. przedstawiono wyniki przybliżania wartości $\ln 3$ przy pomocy szeregów Taylora różnego stopnia. \$\$3. zajmuje się natomiast rysowaniem grafu funkcji $\tan x$ w pobliżu $0$ oraz porównaniem tego z wartościami otrzymanymi za pomocą bibliotecznej funkcji $\tan$ w języku Julia.
+
+\section{Przybliżanie wartości $\ln3$}
+
+\subsection{Metoda}
+
+W celu obliczenia wartości $\ln3$ użyte zostanie przybliżanie funkcji
+$$f(x)=\ln x$$
+w punkcie $a=3$ za pomocą szeregów Taylora $4, 8, 16$ stopnia.
+
+Wzór na pochodną funkcji $\ln x$ jest powszechnie znany:
+$${d\over dx}\ln x=\frac1x,$$
+natomiast wzór na pochodną $k$-tego stopnia, można wyliczyć w prosty sposób:
+\begin{align}
+    {d^k\over dx^k}\ln x={d^{k-1}\over dx^{k-1}}\frac1x={d^{k-2}\over dx^{k-2}}\Big(-\frac1{x^2}\Big)=...=(-1)^{k-1}\frac1{x^{-k}}.
+\end{align}
 
 \end{document}
