--- a/prac_0/main.tex
+++ b/prac_0/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt, wide]{mwart}
+\documentclass[11pt, wide, leqno]{mwart}
 
 \usepackage{../template}
 
@@ -22,7 +22,7 @@ Jak nietrudno zauważyć, wartość $R_n(x, a)$ przy $x$ bardzo blisko $a$ jest 
 
 Innym ciekawym zastosowaniem szeregów Taylora jest tworzenie grafów funkcji. Możemy zdefiniować na przykład $\tan x$ w pobliżu punktu $0$ jako zwykły wielomian, co pozwala na obliczenie przybliżonych wartości funkcji i naniesienie ich na oś współrzędnych. W matematyce szereg Taylora, który aproksymuje funkcje w pobliżu punktu $0$ nosi nazwę szeregu Maclaurina.
 
-Celem niniejszego sprawozdania jest sprawdzenie dokładności przybliżania funkcji za pomocą szeregów Taylora. W \$\$2-3 omówiono dwa ważne zastosowania szeregów Taylora: przybliżanie wartości niewymiernych oraz rysowanie grafów funkcji. Dokładniej, w \$\$2. przedstawiono wyniki przybliżania wartości $\ln 3$ przy pomocy szeregów Taylora różnego stopnia. \$\$3. zajmuje się natomiast rysowaniem grafu funkcji $\tan x$ w pobliżu $0$ oraz porównaniem tego z wartościami otrzymanymi za pomocą bibliotecznej funkcji $\tan$ w języku Julia.
+Celem niniejszego sprawozdania jest sprawdzenie dokładności przybliżania funkcji za pomocą szeregów Taylora. W \$\$2-3 omówiono dwa ważne zastosowania szeregów Taylora: przybliżanie wartości niewymiernych oraz rysowanie grafów funkcji. Dokładniej, w \$\$2. przedstawiono wyniki przybliżania wartości $\ln 3$ przy pomocy szeregów Maclaurina różnego stopnia. \$\$3. zajmuje się natomiast rysowaniem grafu funkcji $\tan x$ w pobliżu $0$ oraz porównaniem tego z wartościami otrzymanymi za pomocą bibliotecznej funkcji $\tan$ w języku Julia.
 
 \section{Przybliżanie wartości $\ln3$}
 
@@ -30,7 +30,7 @@ Celem niniejszego sprawozdania jest sprawdzenie dokładności przybliżania funk
 
 W celu obliczenia wartości $\ln3$ użyte zostanie przybliżanie funkcji
 $$f(x)=\ln x$$
-w punkcie $a=3$ za pomocą szeregów Taylora $4, 8, 16$ stopnia.
+w punkcie $a=3$ za pomocą szeregów Maclaurina $4, 8, 16$ stopnia.
 
 Wzór na pochodną funkcji $\ln x$ jest powszechnie znany:
 $${d\over dx}\ln x=\frac1x,$$
