--- a/template.sty
+++ b/template.sty
@@ -144,7 +144,7 @@
 \RequirePackage{tikzducks}
 
 \definecolor{ducky-yellow}{HTML}{f2ca63}
-\newcommand{\koneic}{\begin{flushright}\emph{\scriptsize\color{def}i śmiga}\\ \begin{tikzpicture}\duck[body=ducky-yellow, bill=title-color,scale=0.36, bowtie, devil=title-color];\end{tikzpicture}\end{flushright}}
+\newcommand{\koniec}{\begin{flushright}\begin{tikzpicture}\duck[body=ducky-yellow, bill=czerw,scale=0.36, bowtie, devil=czerw];\end{tikzpicture}\end{flushright}}
 
 \RequirePackage{marvosym} % śmieszne znaczki
 \RequirePackage{phaistos} % paczuszka pozwalająca pisać hieroglify
