--- a/prac_0/main.tex
+++ b/prac_0/main.tex
@@ -29,7 +29,7 @@ $$f(x)=\ln (1+x)$$
 w pobliżu $a=0$ za pomocą szerega Maclaurina.
 
 Wzór na pochodną funkcji $\ln (x+1)$ jest powszechnie znany:
-$${d\over dx}\ln x=\frac1{x+1},$$
+$${d\over dx}\ln (x+1)=\frac1{x+1},$$
 natomiast wzór na pochodną $k$-tego stopnia, można wyliczyć w prosty sposób:
 \begin{align}
     {d^k\over dx^k}\ln (x+1)=(-1)^{k+1}{(k-1)!\over(1+x)^{k}}.
