--- a/template.sty
+++ b/template.sty
@@ -69,7 +69,7 @@
 \definecolor{czerw}{HTML}{cc5b5b}
 \definecolor{ziel}{HTML}{a0a01c}
 \definecolor{pom}{HTML}{cb8e17}
-\definecolor{nieb}{HTML}{cb8e17}
+\definecolor{zol}{HTML}{cb8e17}
 \definecolor{fiol}{HTML}{a95f80}
 \definecolor{roz}{HTML}{ce8395}
 \definecolor{turk}{HTML}{ce8395}
@@ -78,9 +78,13 @@
 \hypersetup {
     colorlinks=true,
     linktoc=all,
-    linkcolor=czerw,
+    linkcolor=fiol,
     urlcolor=nieb
 }
+
+\RequirePackage{nameref}
+\RequirePackage{varioref}
+\RequirePackage{cleveref}
 
 
 %% ====  SRODOWISKO DO ILUSTRACJI  ==== %%
