pierwsze-proby-prac-1

--- a/prac_1/doc/sprawozdanie.tex
+++ b/prac_1/doc/sprawozdanie.tex
@@ -10,4 +10,8 @@
 
 \section{Wstęp}\label{sec:ws}
 
+Metoda Chudowskiego - rekord cyfr pi z 2009, na podstawie wzoru Ramanujana
+
+\input{monte_carlo.tex}
+
 \end{document}
