--- a/prac_1/doc/sprawozdanie.tex
+++ b/prac_1/doc/sprawozdanie.tex
@@ -10,8 +10,10 @@
 
 \section{Wstęp}\label{sec:ws}
 
+Luiziana, mozna dodac ze House of the Rising Sun jest o New Orleans $\in$ Louisiana, i ze \emph{Oh, mother, tell your children / Not to do what I have done}, przyblizac $\pi$ liczba 4.
+
 Metoda Chudowskiego - rekord cyfr pi z 2009, na podstawie wzoru Ramanujana
 
-\input{monte_carlo.tex}
+\input{pierwsze-proby.tex}
 
 \end{document}
