--- a/prac_1/doc/sprawozdanie.tex
+++ b/prac_1/doc/sprawozdanie.tex
@@ -16,4 +16,6 @@ Metoda Chudowskiego - rekord cyfr pi z 2009, na podstawie wzoru Ramanujana
 
 \input{pierwsze-proby.tex}
 
+\input{ramanujan.tex}
+
 \end{document}
