--- a/prac_1/doc/ramanujan.tex
+++ b/prac_1/doc/ramanujan.tex
@@ -1,1 +1,3 @@
-\section{Metoda Ramanujana}
+\section{Wzór Ramanujana}
+
+Tutaj trzeba ogarnąć co się odpierdala bo w sumie to nawet porządni matematycy nie są pewni, to co dopiero student debil.
