--- a/prac_1/doc/sprawozdanie.tex
+++ b/prac_1/doc/sprawozdanie.tex
@@ -10,12 +10,16 @@
 
 \section{Wstęp}\label{sec:ws}
 
-Luiziana, mozna dodac ze House of the Rising Sun jest o New Orleans $\in$ Louisiana, i ze \emph{Oh, mother, tell your children / Not to do what I have done}, przyblizac $\pi$ liczba 4.
+Indiana Bill
 
 Metoda Chudowskiego - rekord cyfr pi z 2009, na podstawie wzoru Ramanujana
 
 \input{pierwsze-proby.tex}
 
+\input{wzor-viete.tex}
+
 \input{ramanujan.tex}
+
+\input{super-szybki-super-ciezki.tex}
 
 \end{document}
