--- a/prac_1/doc/sprawozdanie.tex
+++ b/prac_1/doc/sprawozdanie.tex
@@ -23,4 +23,6 @@ Metoda Chudowskiego - rekord cyfr pi z 2009, na podstawie wzoru Ramanujana
 
 \input{super-szybki-super-ciezki.tex}
 
+\koniec
+
 \end{document}
