--- a/prac_1/doc/pierwsze-proby.tex
+++ b/prac_1/doc/pierwsze-proby.tex
@@ -85,15 +85,10 @@ Zauważmy, że $\lim_{k\to\infty}L_k=2\pi$ i $\lim_{k\to\infty}l_k=2\pi$ oraz dl
 $$l_n\leq 2\pi\leq L_n,$$
 a więc możemy przybliżać $\pi$ jako
 $$\pi\approx{L_n-l_n\over 4},$$
-czyli jako środek przedziału $[l_n,L_n]$. Wybierzemy dwa punkty startowe:
+czyli jako środek przedziału $[l_n,L_n]$. Wybierzemy punkt startowy jako trójkąt równoboczny:
 $$\begin{cases}
     l_3=3\sqrt3\\
     L_3=6\sqrt3
-\end{cases}$$
-oraz
-$$\begin{cases}
-    l_4=4\sqrt2\\
-    L_4=8
 \end{cases}$$
 
 \subsection{Algorytm Monte Carlo}
