--- a/prac_1/doc/pierwsze-proby.tex
+++ b/prac_1/doc/pierwsze-proby.tex
@@ -2,6 +2,7 @@
 
 
 \subsection{Interpretacja geometryczna}
+\label{geometric-interpretation}
 
 Bardzo często $\pi$ jest definiowane jako stosunek obwodu okręgu do jego średnicy. W historii pojawiało się wiele prób wyznaczenia $\pi$ korzystając z obwodu wielokątów foremnych wpisanych w oraz opisanych na okręgu jednostkowym. Wraz ze wzrostem liczby boków zwiększa się dokładność oszacowań obwodu okręgu, co daje coraz to bliższe prawdy granice na wartość ludolfiny. 
 
