--- a/prac_1/doc/pierwsze-proby.tex
+++ b/prac_1/doc/pierwsze-proby.tex
@@ -77,7 +77,7 @@ oraz:
 
 \begin{figure}[!h]\centering
     \renewcommand{\figurename}{Wykres}
-    \includegraphics[width=0.7\textwidth]{../prog/geometric_log_error.png}
+    \includegraphics[width=0.7\textwidth]{../prog/geo3_log_error.png}
     \caption{Wykres logarytmu dziesiętnego z błędu względnego dla przybliżenia $\pi$ za pomocą metody geometrycznej.}
     \label{geometric-error}
 \end{figure}
