--- a/prac_1/doc/sprawozdanie.tex
+++ b/prac_1/doc/sprawozdanie.tex
@@ -25,4 +25,28 @@ Metoda Chudowskiego - rekord cyfr pi z 2009, na podstawie wzoru Ramanujana
 
 \koniec
 
+\begin{thebibliography}{69}
+    \bibitem{review}
+        Baruah, Nayandeep Deka, Bruce C. Berndt, and Heng Huat Chan.,
+        \textit{Ramanujan's Series for $\frac1\pi$: A Survey.}, 
+        The American Mathematical Monthly 116, no. 7 (2009): 567-87,
+        \url{http://www.jstor.org/stable/40391165}.
+    \bibitem{ramanujan}
+        Srinivasa Ramanujan,
+        \textit{Collected Papers of Srinivasa Ramanujan}, 
+        Cambridge University Press,
+        1st edition,
+        2015
+    \bibitem{gausse-smth}
+        Richard P. Brent,
+        \textit{Multiple-precision zero-finding methods and the complexity of elementary function evaluation},
+        2010,
+        \url{https://arxiv.org/pdf/1004.3412.pdf}.
+    \bibitem{gausse2}
+        Hans Herneave,
+        \textit{Gauss-Legendre Algorithm},
+        accessed 20.11.2022,
+        \url{https://cage.ugent.be/~hvernaev/Gauss-L.html}
+\end{thebibliography}
+
 \end{document}
