--- a/prac_1/doc/wzor-viete.tex
+++ b/prac_1/doc/wzor-viete.tex
@@ -34,4 +34,4 @@ Na Wykresie~\ref{viete-error}. zaprezentowany jest wykres zbieżności algorytmu
     \label{viete-error}
 \end{figure}
 
-Zbieżność liniowa jest dobrym wynikiem, tak samo jak w podejściu geometrycznym opisanym w Sekcji~\ref{geometric-interpretation}
+Metoda Viete'a daje wyniki podobne do podejścia geometrycznego opisanego w Sekcji~\ref{geometric-interpretation}. Obie metody mają błąd bardzo bliski zera dla około 8000 iteracji metody. W obu metodach korzystamy z dwóch zmiennych, więc są podobne pamięciowo. W metodzie zaproponowanej przez Archimedesa musimy zapamiętywać obwód figury opisanej i wpisanej w okrąg, natomiast dla metody Viete'a potrzebujemy zapisywać dotychczasowy iloczyn oraz kolejny wyraz ciągu $a_k$. Różnią się one jedynie ilością operacji jakie wykonujemy w jednej iteracji, więc metoda Viete'a ma marginalnie lepszą złożoność czasową.
